@@ -183,3 +183,6 @@ Other contributors (sorted by name):
  Kir Kolyshkin <kir@sacred.ru>
   * mouse autohide patch
 
+ Mikel Ward <mikel@mikelward.com>
+  * maximize patch
+
