@@ -1,3 +1,9 @@
+2008-05-26	Benedikt Meurer <benny@xfce.org>
+
+	* doc/, terminal/, THANKS: Apply patch from Mikel Ward
+	  <mikel@mikelward.com> to add support for a --maximize
+	  command line option.
+
 2007-12-02	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
